	ordination (at least not yet).  These methods display the
	ordination distances in given number of dimensions (defaults 'k =
	2') against original observed distances.  These original distances
	are found from the full space solution, and in capscale() and
	wcmdscale() they are correct for the imaginary axes. The weights
	are used in wcmdscale() and cca() so that their distances differ
	from plotted ordinations, but agree with eigenvalues.

	* wcmdscale: added method functions print(), plot() and
	scores(). Now class "wcmdscale" results also retun the function
	call and dimensions have names.
	
Version 2.1-22 (closed January 8, 2013)

	* multipart: argument global was printed as TRUE regardless of the
	actual argument value. This did not affect calculations. Reported
	by Valerie Coudrain.

	* monoMDS, metaMDS: Default convergence criteria were changed in
	monoMDS. Most importantly, now scale factor of the gradient is
	sfgrmin = 1e-7. The former limit 1e-5 was much too slack with
	large data sets and iterations stopped too early without getting
	close to the solution. In addition, scores() ignore now requests
	to scores beyond those calculated instead of failing, and
	scores.metaMDS() does not drop dimensions.

	* metaMDS: Iteration sometimes finds a false convergence, or an
	identical solution to the previous best although a better solution
	can exist. These are undetected except sometimes in parallel
	processing. Therefore we first label convergence false when we
	find a new best solution, and then study if it really
	converged. This is a rare effect, and can only be seen with
	parallel processing. An example is

	set.seed(7)
	metaMDS(BCI, k=4, parallel=2)

	which will converge in run 7 with the old code although run 8
	would be better, but converges in run 18 with the new code.
	
	* nestednodf: added plot() method modelled after
	plot.nestedtemp().
	
	* ordiR2step: gained argument 'R2scope' (default TRUE) which can