@@ -69,17 +69,14 @@
 `stressplot.cca` <-
     function(object, k = 2, pch, p.col = "blue", l.col = "red", lwd = 2, ...)
 {
-    ## Not yet done for pCCA
-    if (!is.null(object$pCCA))
-        stop("not implemented yet for partial CCA")
     ## Normalized scores to reconstruct data
     u <- cbind(object$CCA$u, object$CA$u)
     sev <- sqrt(c(object$CCA$eig, object$CA$eig))
     w <- sqrt(object$rowsum)
     u <- diag(w) %*% u %*% diag(sev)
     ## Distances
-    dis <- dist(u)
-    odis <- dist(u[,1:k, drop = FALSE])
+    dis <- dist(cbind(u, object$pCCA$Fit))
+    odis <- dist(cbind(u[,seq_len(k), drop = FALSE], object$pCCA$Fit))
     ##odis <- dist(sweep(Xbar, 2, sqrt(object$colsum), "*"))
     ## plot like above
         ## Plot
@@ -97,21 +94,21 @@
 `stressplot.capscale` <-
     function(object, k = 2, pch, p.col = "blue", l.col = "red", lwd = 2, ...)
 {
-    ## Not yet done for pRDA
-    if (!is.null(object$pCCA))
-        stop("not implemented yet for partial analysis")
-    ## Normalized scores to reconstruct data
+    ## Scores to reconstruct data
     u <- cbind(object$CCA$u, object$CA$u)
     ev <- c(object$CCA$eig, object$CA$eig)
-    ## normalizing constant
-    const <- sqrt(ev)
+    u <- u %*% diag(sqrt(ev))
+    if (!is.null(object$pCCA))
+        pFit <- object$pCCA$Fit/sqrt(nrow(object$pCCA$Fit) - 1)
+    else
+        pFit <- NULL
     ## Distances
-    dis <- dist(u %*% diag(const))
+    dis <- dist(cbind(u, pFit))
     if (!is.null(object$CA$imaginary.u.eig))
         dis <- sqrt(dis^2 - dist(object$CA$imaginary.u.eig)^2)
     if (!is.null(object$ac))
         dis <- dis - object$ac
-    odis <- dist(u[,1:k, drop=FALSE] %*% diag(const[1:k], nrow = k))
+    odis <- dist(cbind(u[,seq_len(k), drop=FALSE], pFit))
     ## plot like above
         ## Plot
     if (missing(pch))
