@@ -21,7 +21,9 @@ Version 2.1-23 (opened January 8, 2013)
 	are found from the full space solution, and in capscale() and
 	wcmdscale() they are correct for the imaginary axes. The weights
 	are used in wcmdscale() and cca() so that their distances differ
-	from plotted ordinations, but agree with eigenvalues.
+	from plotted ordinations, but agree with eigenvalues. Partial
+	models (p-dbRDA, pRDA, pCCA) add the partial component both to the
+	original dissimilarities and the fit.
 
 	* wcmdscale: added method functions print(), plot() and
 	scores(). Now class "wcmdscale" results also retun the function
